refactor: Eliminar Collectors.toList() y usar Stream.toList() en ClienteService